--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.2",
     "next": "^12.1.5",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3"
